--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
 		<div class="column is-half" style="">
 		  <figure class="image is-4by3">
 			  <a href="/{{ i[0] }}/{{ i[11] }}">
-		      <img style='height: 100%; width: 100%; object-fit: contain'  src="/static/sets/{{ i[0] }}.jpg" alt="Image">
+		      <img style='height: 100%; width: 100%; object-fit: contain'  src="/static/sets/{{ i[0] }}.jpg" alt="Image" loading="lazy">
 		    </a>
 		  </figure>
 		</div>
