--- a/templates/table.html
+++ b/templates/table.html
@@ -18,9 +18,9 @@
         <tr>
 
           {% if brick[5] == 'nil' %}
-          <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"></td>
+          <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
           {% else %}
-          <td><img src="{{ '/static/parts/' + brick[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"></td>
+          <td><img src="{{ '/static/parts/' + brick[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"loading="lazy"></td>
           {% endif %}
 
           <td style="text-align:left;margin:0px;" class="hidden-mobile name-class">{{ brick[3] }}</td>
@@ -48,7 +48,7 @@
                   {% endfor %}
                   <input type="tel" style="text-align:center;font-size: 16px;" id="missing" value="{{ ns.count }}" pattern="\d+">
                   <button class="square-button" id="bnumber-form" type="submit">
-                    <img src="/static/save.svg" alt="Save Icon">
+                    <img src="/static/save.svg" alt="Save Icon" loading="lazy">
                   </button>
                 </div>
               </form>
@@ -68,7 +68,7 @@
 
 <div style="display: flex; justify-content: center;">
   <div style="display: flex; align-items: center;">
-    <img src="{{ '/static/minifigs/' + fig[0] + '.jpg' }}" class="lightbox-trigger" style="height: 100px; width: auto;" alt="{{ fig[2] }}">
+    <img src="{{ '/static/minifigs/' + fig[0] + '.jpg' }}" class="lightbox-trigger" style="height: 100px; width: auto;" alt="{{ fig[2] }}" loading="lazy">
     <span style="font-size: 50px; margin-left: 10px;">X {{ fig[3] }}</span>
   </div>
 </div>
@@ -92,9 +92,9 @@
         {% if part[0] == fig[0] %}
         <tr>
             {% if part[5] == 'nil' %}
-            <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ part[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"></td>
+            <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ part[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
             {% else %}
-            <td><img src="{{ '/static/parts/' + part[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ part[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"></td>
+            <td><img src="{{ '/static/parts/' + part[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ part[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
             {% endif %}
             <td style="text-align:left;margin:0px;" class="hidden-mobile name-class">{{ part[3] }}</td>
             <td class="hidden-mobile">{{ part[7] }}</td>
@@ -119,7 +119,7 @@
                     {% endfor %}
                     <input type="tel" style="text-align:center;font-size: 16px;" id="missing" value="{{ ns.count }}" pattern="\d+">
                     <button class="square-button" id="bnumber-form" type="submit">
-                      <img src="/static/save.svg" alt="Save Icon">
+                      <img src="/static/save.svg" alt="Save Icon" loading="lazy">
                     </button>
                   </div>
                 </form>
