--- a/templates/missing.html
+++ b/templates/missing.html
@@ -42,6 +42,7 @@
 		<table id="data" class="table">
 			<thead>
 			  <tr>
+				<th ></th>
 				<th >id</th>
 				<th >part_num</th>
 				<th >color_id</th>
@@ -52,11 +53,16 @@
 			<tbody>
 			  {% for brick in missing_list %}
 				<tr>
+					{% if brick[4] == 'nil' %}
+					<td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
+					{% else %}
+					<td><img src="{{ '/static/parts/' + brick[4] + '.jpg' }}" class="lightbox-trigger" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
+					{% endif %}
 				  <td>{{ brick[0] }}</td>
 				  <td>{{ brick[1] }}</td>
 				  <td>{{ brick[2] }}</td>
 				  <td>{{ brick[3] }}</td>
-				  <td>{{ brick[4] }}</td>			 
+				  <td>{{ brick[5] }}</td>			 
 				</tr>
 			  {% endfor %}
 			</tbody>
