--- a/templates/table.html
+++ b/templates/table.html
@@ -21,8 +21,8 @@
           <td><img src="{{ '/static/parts/' + brick[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"loading="lazy"></td>
           {% endif %}
 
-          <td style="text-align:left;margin:0px;" class="hidden-mobile name-class">{{ brick[3] }}</td>
-          <td class="hidden-mobile">{{ brick[7] }}</td>
+          <td style="text-align:left;margin:0px;width:100%;" class="hidden-mobile name-class">{{ brick[3] }}</td>
+          <td style="white-space: nowrap;" class="hidden-mobile">{{ brick[7] }}</td>
           <td style="text-align: center;">{{ brick[8] }}</td>
           <td class="centered-cell">
             <div class="inputContainer">
