--- a/templates/table.html
+++ b/templates/table.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="center-table" >
-<table id="data" class="table">
+ <div style="overflow-x:auto;">
+<table id="data" class="table tablemobile">
     <thead>
       <tr>
-        <th class="fixed-width"></th>
-        <th style="text-align:left;margin:0px;" class="fixed-width hidden-mobile name-class">Name</th>
-        <th class="fixed-width hidden-mobile">Color</th>
-        <th class="fixed-width" style="text-align: center;">Qty</th>
-        <th class="fixed-width" style="text-align: center;">Missing</th>
+        <th style="width:65px;">Image</th>
+        <th class="hidden-mobile name-class">Name</th>
+        <th class="hidden-mobile">Color</th>
+        <th>Qty</th>
+        <th style="text-align:center;">Missing</th>
       </tr>
     </thead>
     <tbody>
@@ -18,13 +18,13 @@
           {% if brick[5] == 'nil' %}
           <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;" loading="lazy"></td>
           {% else %}
-          <td><img src="{{ '/static/parts/' + brick[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"loading="lazy"></td>
+          <td style="width:65px;height:55px;"><img src="{{ '/static/parts/' + brick[5] + '.jpg' }}" class="lightbox-trigger" alt="{{ brick[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"loading="lazy"></td>
           {% endif %}
 
-          <td style="text-align:left;margin:0px;width:100%;" class="hidden-mobile name-class">{{ brick[3] }}</td>
-          <td style="white-space: nowrap;" class="hidden-mobile">{{ brick[7] }}</td>
+          <td style="text-align:left;" class="hidden-mobile name-class">{{ brick[3] }}</td>
+          <td style="text-align:left;white-space: nowrap;" class="hidden-mobile">{{ brick[7] }}</td>
           <td style="text-align: center;">{{ brick[8] }}</td>
-          <td class="centered-cell">
+          <td style="text-align:right;" class="centered-cell">
             <div class="inputContainer">
               {% set ns = namespace(count='') %}
               <form id="number-form">
