Added config button to nav bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,9 +92,12 @@
 			<a class="navbar-item" href="/create">
 				Add Set
 			</a>
-			<!-- <a class="navbar-item" href="/missing">
+			<a class="navbar-item" href="/missing">
 				Missing
-			</a> -->
+			</a> 
+			<a class="navbar-item" href="/config">
+				Config
+			</a>
 			<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
