Removed expand button on desktop

--- a/templates/base.html
+++ b/templates/base.html
@@ -167,7 +167,7 @@ background-color: white;
           Home
         </a>
     
-        <a class="navbar-item hidden-1desktop" id="expand-button">
+        <a class="navbar-item hidden-desktop" id="expand-button">
           Expand Columns
         </a> 
         
