--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,13 @@ td {
     word-wrap: break-word;
 }
 
+.name-class {
+  max-width: 300px; 
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 @media only screen and (min-width: 600px) {
 
   .hidden-desktop {
