--- a/templates/missing.html
+++ b/templates/missing.html
@@ -102,7 +102,7 @@
 			  <tr>
 				<th ></th>
 				<th >part_num</th>
-				<th >color_id</th>
+				<th >color</th>
 				<th >element_id</th>
 				<th >total_quantity</th>
 			  </tr>
@@ -118,7 +118,7 @@
 				  <td>{{ brick[0] }}</td>
 				  <td>{{ brick[1] }}</td>
 				  <td>{{ brick[2] }}</td>
-				  <td>{{ brick[4] }}</td>			 
+				  <td>{{ brick[3] }}</td>			 
 				</tr>
 			  {% endfor %}
 			</tbody>
