--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-ns.<html data-theme="light" class="has-navbar-fixed-top">
+<html data-theme="light" class="has-navbar-fixed-top">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
