Moved Inst. and Inv. buttons and fixed dropdown size

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,11 +176,12 @@ background-color: white;
   max-width: 90%;
   max-height: 90%;
 }
+
 </style>
 
   </head>
   <body>
-    <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-dark is-fixed-top is-size-6" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
           Home
